[tool.poetry]
name = "gshirachin-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gshirachin_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
